# seq_k

./: .gitignore  README.md  healthbench_result.md  pyproject.toml  requirements.txt  result.md
benchmarks/: _mcq.py
benchmarks/advancedif/: __init__.py  benchmark.py  feedback.py  prompts.py
benchmarks/arcagi2/: __init__.py  benchmark.py  feedback.py  prompts.py
benchmarks/clbench/: __init__.py  benchmark.py  feedback.py  prompts.py
benchmarks/healthbench/: __init__.py  benchmark.py  feedback.py  prompts.py
benchmarks/medmcqa/: __init__.py  benchmark.py  feedback.py
benchmarks/medqa/: __init__.py  benchmark.py  feedback.py
benchmarks/medxpertqa/: __init__.py  benchmark.py  feedback.py
benchmarks/researchrubrics/: __init__.py  benchmark.py  feedback.py  prompts.py
benchmarks/terminalbench/: __init__.py  benchmark.py  feedback.py  prompts.py
core/: __init__.py  __main__.py  cli.py  harness.py  llm.py  metrics.py  pricing.py  results.py  s3sync.py  types.py
runs/advancedif.smoke.passk-2026-06-16T22-56-09Z/: config.json  summary.json
runs/advancedif.smoke.seqk-2026-06-16T22-56-50Z/: config.json  summary.json
runs/arcagi2.smoke.passk-2026-06-16T22-53-19Z/: config.json  summary.json
runs/arcagi2.smoke.seqk-2026-06-16T22-54-06Z/: config.json  summary.json
runs/clbench.passk/: prompts.md  results.json
runs/clbench.passk.gpt4o/: full.json  prompts.txt  results.json
scripts/: _inspect_traj.py  _show_prompt.py  cost_probe.py  run_experiment.sh  run_healthbench_binary.py  saturation_check.py  scrub_secrets.py  upload_run.sh
tests/: test_mcq.py
(+1030 files in other folders)
