[project]
name = "seq_k"
version = "0.1.0"
description = "Pass@K and Seq@K evaluation under sequential feedback (clean rewrite)"
requires-python = ">=3.10"
dependencies = [
    "litellm>=1.0",
    "huggingface_hub>=0.20",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "datasets>=2.0",
]

[project.scripts]
seq_k = "core.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "benchmarks*"]
